# tmcr-newlogic-cli

./: .gitignore  CHANGELOG.md  default.nix  docker.nix  tmcr-newlogic-cli.cabal
.github/workflows/: main.yml
app/: Commands.hs  Main.hs
